2003-10-21  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/French.tab: Couple of minor fixes.

	* www/docman/include/doc_utils.php: "All languages" in language
	selection dropdown menu is now * rather than 0.

	* www/docman/index.php: Taking that change into consideration, we
	now set $language_id to 0 if we get "*" as a CGI value.  This
	means we can distinguish between undefined $language_id and "all
	languages", so that selecting "All languages" in a docman really
	shows documents from all languages.

2003-10-18 Christian Bayle <bayle@debian.org>
	
	* Applied various patch
	#547: Fix syntax typo of mailing_lists_create.php (Hidenari Miwa)
	#554: skills_utils.php missing a double quote     (Mitch Murphy )
	#550: Mandatory login for gforge remastered       (Ramon van Alteren)
	#540: Changes for Project Summary and Admin pages (Mathieu Peltier)
	#546: Fix of mail by Developer Profile page.      (Hidenari Miwa)
	#545: Tracker i18n                                (Hidenari Miwa)
	#544: Document manager i18n                       (Hidenari Miwa)
	#542: Bookmark page link                          (Hidenari Miwa)
	#475: PluginManager show comments before HTML (Vicente J. Ruiz Jurado)
	
2003-10-08 Tom Copeland  <tom@infoether.com>

	* www/mail/admin/index.php:
	Fixed bug [ #538 ] Password not sent for new mailing-lists

2003-10-05  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/French.tab: Fixed truncated about_blurb on
	the homepage.

	* www/themes/osx/Theme.class: Localised Log In/Log Out/My Account/New
	Account texts for the OSX theme.

	* www/include/Layout.class: Use /etc/gforge/custom/index_std.php
	if it exists (patch #525 by Francisco Gimeno).

	* www/include/languages/Korean.tab, SimplifiedChinese.tab: Removed
	English strings.  They are unneeded, and since they're quite
	possibly outdated they can even be harmful since they override the
	default (up-to-date) English version.
